about CDH up to source

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -22,8 +22,8 @@
 %  * historical notes 
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
+%    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
 %  * filled the demand for some starting overview of the common structures
-%  * unification of MM and PhC concepts, attempt for clarification of these two terms
 %  * documented the original sieving apparatus
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
@@ -31,11 +31,13 @@
 %		  without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion 
 %		  (http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 %         stress the importance of taking the spatial dispersion into account
-%      3) the s-parameter method, although widely used, does not always give correct results
-%  * illustrated the difference of these results against CDH
+%      3) the s-parameter method, although widely used, does not always give correct results for diverse reasons
+%  * illustrated the difference of the s-parameter results against supposedly more reliable CDH
 %  * provide the simulation environment which facilitates correct computations,  and solves 
 %	  1) the artifacts from the near field around the structure being recorded by the monitor planes (--reformulate)
-%	  2) by mathematical means, the phase-ambiguity in the s-parameter method 
+%	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
+%  * proposes a novel function for a wave source in FDTD that has a flat-top spectrum in a well-defined 
+%		interval of frequencies
 %  * We validated these FDTD computations against
 %     1) the H-bars spectra in the NumMet section
 %	  2) the Pendry's and Maslovski's models for f_p
@@ -49,7 +51,6 @@
 
 %+ achievements <------- todo add
 	%+ When one can use N,
-	%+ Unambiguous N retrieval, and resulting nontrivial conclusions
 	%+
 %+ Kramers-Kronig check of the RodArray spectrum (or some other?)
 
