--- a/expe.tex
+++ b/expe.tex
@@ -60,7 +60,7 @@ The spectral response of both the emitter and electrooptic sampling substantiall
 
 \subsection{Simultaneous reflectance and transmittance measurement}
 \paragraph{Principle} %{{{
-With rearrangement of optics, it would be possible to measure the \textit{reflectance spectrum}, similarly as the transmission was measured. However, due to the complexity of such a setup and its sensitivity to the sample displacement, we did not use a second sampling branch for reflected signal. Instead of using two sampling schemes, we recovered the amplitude and phase reflectance of the sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire in the terahertz range, $N \approx$ 3.068, these slabs introduce several distinct echoes into the transmitted signal.
+With rearrangement of optics, it would be possible to measure the \textit{reflectance spectrum}, similarly as the transmission was measured. However, due to the complexity of such a setup and its sensitivity to the sample displacement, we did not use a second sampling branch for reflected signal. Instead of using two sampling schemes, we recovered the amplitude and phase reflectance of the sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire in the terahertz range along the optical axis, $N \approx$ 3.068, these slabs introduce several distinct echoes into the transmitted signal.
 %\begin{figure} \caption{A broadband pulse passes through a single layer of microspheres randomly arranged between two sapphire slabs and is sampled by electrooptical detection.}  \centering \includegraphics[width=12cm]{img/expe/sample_sapphires.pdf} \end{figure}			%% TODO no use for this figure?
 
 If the beam divergence is neglected, each optical element can be characterised by its complex transfer function in the resulting spectrum. One needs to define three intrinsic transmittance functions: for the beam passing through the volume of the thin sapphire $A(f)$, of the thick sapphire $B(f)$ and through the thin sample $t_S(f)$; all of these are without the effect of reflection at interfaces. 
