--- a/theory.tex
+++ b/theory.tex
@@ -1045,9 +1045,12 @@ Other resonances have both dipole moments zero, due to higher-order rotational s
 Band gaps of a different type, denoted as Bragg band gaps or also as \textit{photonic band gaps} (PBG), are observed exclusively in periodic structures when an integer number of half-waves fits into the unit cell. 
 In the above mentioned periodic lattice of isolated particles, the Bragg band gap can therefore be understood as a resonance of the electromagnetic wave in the space \textit{between} the particles, in contrast with the individual resonances where most of the energy is localised \textit{inside} the particles -- or at least very close to them.
 
-For a wave propagating parallel to any axis of a square or cubic lattice with unit cell size $a$, the rule for the Bragg band gaps is particularly simple:
-\begin{equation} K= \frac{\pi m}{a},\quad m\in\mathbb{Z}. \label{eq_braggbg}\end{equation}
-The first Bragg band gap is observed in a periodic structure when the wavenumber $K$ reaches the $\mathbf X$, $\mathbf Y$ or $\mathbf Z$ points of the Brillouin zone.
+The first Bragg band gap is observed in a periodic structure when the wavenumber $K$ reaches the $\mathbf X$, $\mathbf Y$ or $\mathbf Z$ points of the Brillouin zone. For a wave propagating parallel to any axis of a square or cubic lattice with unit cell size $a$, the rule for a band gap is particularly simple:
+\begin{equation} K= \frac{\pi m}{a},\quad m\in\mathbb{Z}.  \label{eq_braggbg}\end{equation}
+	The Bragg band gaps are characteristic by $m$ being constant over whole band gap, without any resonance-like shape of the $\Neff(f) = \KK(f)c/(2\pi f)$ curve observed for individual resonances. 
+
+In analogy with the solid-state physics the Bragg band gaps can be called \textit{direct} if the dispersion curves at the lower and upper band gap edges are at the same wavenumber $K$.  In contrast, the individual resonances are analogous to the \textit{indirect} band gaps, as the of phase increase over an unit cell is different  for frequencies below and above the individual resonance. Some particular examples are shown later.
+
 %Intuitively it might appear that the requirement of exact equality in the expression (\ref{eq_braggbg}) should cause the Bragg band gap to have zero width, but in fact the dispersion curves bend towards the high-symmetry point, so the band gap can cover a range of frequencies as in Figs. \ref{fg_phcfolding}b and \ref{fg_phcfolding}d.
 
 % The waves between the cells in a Bragg band gap are more-or-less transverse electromagnetic, thus radiative. They are  scattered by the structure. This is a difference from the evanescent fields around the MM cells!
@@ -1056,10 +1059,6 @@ The width of the band gap depends on the scattering strength of the particles; i
 In the Results section, it is also shown that for a particular choice of parameters the width of the Bragg band gap can vanish. 
 % -> zero-width case (it is a transition between a mode traversing from one photonic band to another --- TODO put into Results)
 
-In analogy with the solid-state physics the Bragg band gaps can be called \textit{direct} if the dispersion curves at the lower and upper band gap edges are at the same wavenumber $K$. 
-
-In contrast, the individual resonances are analogous to the \textit{indirect} band gaps, as the of phase increase over an unit cell is different  for frequencies below and above the individual resonance. Some particular examples are shown later.
-
 % -> Field shape: concept of nodal planes (or, more precisely, surfaces)
 % -> exponential wave decay with phase difference across the cell
 
@@ -1067,7 +1066,7 @@ In contrast, the individual resonances are analogous to the \textit{indirect} ba
 %% TODO \paragraph{Other types of band gaps}%{{{
 %% In the literature, also other types of band gaps were identified.  zero-average-index band gaps?
 
-% a) the zero averaged refractive index, b) the zero permeability and c) the zero permittivity gaps
+% a) the zero averaged refractive index, b) the zero average permeability and c) the zero permittivity gaps
 % in
 % Interaction between non-Bragg band gaps in 1D metamaterial photonic crystals
 
